samples/IstioEndpointWeightsMaxLimit.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: se-w-total-ep-wights-over-uint32-max 
spec:
  endpoints:
  - address: 10.0.0.1
    locality: us-west-2
    ports:
      http: 15443
    weight: 1
  - address: 10.0.0.2
    locality: us-east-2
    ports:
      http: 15443
    weight: 4294967295
  - address: 10.0.0.3 
    locality: us-east-2
    ports:
      http: 15443
    weight: 1
  exportTo:
  - '*'
  hosts:
  - www.bookinfo.com 
  location: MESH_INTERNAL
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: DNS
